gulp/assets/stylesheets/modules/_base.scss
/* ... */
.reveal-blur {
  &.show {
    transition: all ease-out 0.1s;
    filter: blur(5px);
    opacity: 0.2;
  }
}

.no-results {
  display: block;
  text-align: center;
}

/* Sortierung, Viewtype Startseite */

.view-icons,
.view-order,
.order-item {
  display: inline-block;
  vertical-align: middle;
}

.order-title,
.order-arrows {
  display: inline-block;
  vertical-align: middle;
}

.order-item {
  margin-right: 0.5rem;
  a {
    color: $black;
    &.active,
    &:hover,
    &:focus {
      color: $primary-color;
    }
    clear: both;
    float: right;
    display: block;
    line-height: 12px;
    height: 12px;
    .fa {
      display: block;
      line-height: 12px;
      height: 12px;
    }
  }
}

/* Korrektur für Fehler im Neuen Eintrag erstellen reveal  */

.new-item {
  .notice {
    padding: 1rem;
    display: block;
    background: rgba(map-get($foundation-palette, alert), 0.9);
    color: $white;
    text-align: center;
  }
  .validation-container {
    position: relative;
    span.single_error {
      top: -2rem;
    }
  }
}

body.login-page {
  background-color: darkgrey;
}

/* tabs  */

.tabs {
  border: 0;
  .tabs-title>a {
    span {
      color: $dark-gray;
      font-size: rem-calc(12);
    }
  }
}

.tabs-content {
  border: 0;
  border-top: 1px solid $light-gray;
}

/* Animations für lazyloaded iamges */

.lazyload,
.lazyloading {
  opacity: 0;
}

.lazyloaded {
  opacity: 1;
  transition: opacity 300ms;
}

a[data-toggle] {
  display: inline-block;
  padding-bottom: 1rem;
}

.dropdown-pane {
  line-height: 1rem;
  font-size: 0.8rem;
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
  text-align: center;
  z-index: 100;
  max-width: 300px;
  &::before {
    content: '▲';
    font-size: 28px;
    top: -17px;
    color: white;
    transform: scaleX(3);
    text-shadow: 0 -1px 1px rgba(0, 0, 0, 0.1);
    position: absolute;
    left: 30px;
    width: 2rem;
    height: 1.1rem;
    line-height: 1rem;
    display: block;
    text-align: center;
    overflow: hidden;
  }
  input {
    max-width: 100%;
    min-width: initial;
    &[readonly] {
      cursor: pointer !important;
    }
  }
  button,
  .button {
    font-weight: bold;
    margin: 1rem 0 0 0;
  }
  >ul {
    margin: 0;
    &.list-items {
      max-height: 24rem;
      overflow-y: auto;
      .buttons {
        float: right;
        vertical-align: middle;
        span,
        a {
          color: $primary-color;
          cursor: pointer;
          &:hover,
          &:focus {
            color: darken($primary-color, 30%);
          }
          &.invalidate-data-link {
            color: map-get($foundation-palette, alert);
            &:hover,
            &:focus {
              color: darken(map-get($foundation-palette, alert), 30%);
            }
          }
        }
      }
    }
    >li {
      position: relative;
      text-align: left;
      font-size: 0.8rem;
      line-height: 1.2rem;
      padding: 0 0 0.2rem 0;
      i:not(.fa) {
        color: $dark-gray;
      }
    }
  }
  &.data-links {
    text-align: center;
    li {
      text-align: left;
    }
    .center-text {
      text-align: center;
    }
    .invalid {
      color: $dark-gray;
    }
    .email {
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;
      max-width: calc(100% - 3rem);
      display: inline-block;
      vertical-align: middle;
    }
  }
  &.align-right {
    right: -18px !important;
    left: auto !important;
    top: 100% !important;
    &:before {
      content: '▲';
      font-size: 28px;
      top: -17px;
      color: white;
      transform: scaleX(3);
      text-shadow: 0 -1px 1px rgba(0, 0, 0, 0.1);
      position: absolute;
      left: auto;
      right: 18px;
      width: 2rem;
      height: 1.1rem;
      line-height: 1rem;
      display: block;
      text-align: center;
      overflow: hidden;
    }
  }
}

